[gd_scene load_steps=22 format=2]

[ext_resource path="res://Levels/PlayerSelection.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/poster.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/selectblank.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/8-BIT WONDER.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Sprites/butrightidle.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/butleftidle.png" type="Texture" id=6]
[ext_resource path="res://Levels/ButtonRightTimer.gd" type="Script" id=7]
[ext_resource path="res://Levels/ButtonLeftTimer.gd" type="Script" id=8]
[ext_resource path="res://Assets/Audio Files/main_menu.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sprites/startidle.png" type="Texture" id=10]
[ext_resource path="res://Levels/ButtonStart.gd" type="Script" id=11]
[ext_resource path="res://Assets/Sprites/instruct_Update.png" type="Texture" id=12]
[ext_resource path="res://Levels/Instructions.gd" type="Script" id=13]
[ext_resource path="res://Levels/AnimationPlayer.gd" type="Script" id=14]
[ext_resource path="res://Assets/Sprites/controls.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/rules_1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/rule2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Audio Files/button_pressed.wav" type="AudioStream" id=18]
[ext_resource path="res://Levels/WaitMe.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "SlideIn"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, -480 ), Vector2( 800, 340 ) ]
}

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -0.0925293
margin_top = -1.85059
margin_right = 1539.91
margin_bottom = 798.149

[node name="poster" type="Sprite" parent="."]
modulate = Color( 0.105882, 0.0941176, 0.0941176, 1 )
position = Vector2( 777.76, 397.921 )
scale = Vector2( 1, 1.07312 )
texture = ExtResource( 2 )

[node name="selectblank" type="Sprite" parent="."]
position = Vector2( 800, 400 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="playerAmount" type="Label" parent="."]
margin_left = 656.702
margin_top = 287.309
margin_right = 979.702
margin_bottom = 506.309
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1

[node name="buttonRight" type="Sprite" parent="."]
position = Vector2( 1050, 400 )
scale = Vector2( 0.7, 0.8 )
texture = ExtResource( 5 )

[node name="buttonLeft" type="Sprite" parent="."]
position = Vector2( 550, 400 )
scale = Vector2( 0.7, 0.8 )
texture = ExtResource( 6 )

[node name="buttonRightTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 7 )

[node name="buttonLeftTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="startButton" type="Sprite" parent="."]
position = Vector2( 802.005, 595.376 )
scale = Vector2( 0.502919, 0.512995 )
texture = ExtResource( 10 )

[node name="buttonStart" type="Timer" parent="."]
one_shot = true
script = ExtResource( 11 )

[node name="instructions" type="Sprite" parent="."]
visible = false
position = Vector2( 800, -480 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="instructions"]
anims/SlideIn = SubResource( 2 )
script = ExtResource( 14 )

[node name="instructions2" type="Sprite" parent="."]
visible = false
position = Vector2( 800, 333 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 15 )

[node name="instructions3" type="Sprite" parent="."]
visible = false
position = Vector2( 800, 333 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 16 )

[node name="instructions4" type="Sprite" parent="."]
visible = false
position = Vector2( 800, 333 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 17 )

[node name="buttonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="waitMe" type="Timer" parent="."]
script = ExtResource( 19 )
[connection signal="leftTimerOn" from="." to="buttonLeftTimer" method="_on_Node_leftTimerOn"]
[connection signal="rightTimerOn" from="." to="buttonRightTimer" method="_on_Node_rightTimerOn"]
[connection signal="startInstructions" from="." to="instructions" method="_on_Node_startInstructions"]
[connection signal="startInstructions" from="." to="instructions/AnimationPlayer" method="_on_Node_startInstructions"]
[connection signal="startTimerOn" from="." to="buttonStart" method="_on_Node_startTimerOn"]
[connection signal="waitMe" from="." to="waitMe" method="_on_Node_waitMe"]
[connection signal="timeout" from="buttonRightTimer" to="." method="_on_buttonRightTimer_timeout"]
[connection signal="timeout" from="buttonLeftTimer" to="." method="_on_buttonLeftTimer_timeout"]
[connection signal="timeout" from="buttonStart" to="." method="_on_buttonStart_timeout"]
[connection signal="animation_finished" from="instructions/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="waitMe" to="." method="_on_waitMe_timeout"]
